--- a/CartPage.html
+++ b/CartPage.html
@@ -15,6 +15,7 @@
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
     <script src="JavaScript/products.js" async></script>
     <script src="JavaScript/functions.js" async></script>
+    <script src="JavaScript/payment.js" async></script>
 
 <body>
 
@@ -114,7 +115,7 @@
 
         </div>
         <div class="main-buttons">
-            <button class="btn info" id="payment-btn" onclick="window.location.href='DeliveryPage.html'">Proceed to
+            <button class="btn info payment-proceed" id="payment-btn" onclick="window.location.href='DeliveryPage.html'">Proceed to
                 Pay
             </button>
             <br>
