--- a/Products.html
+++ b/Products.html
@@ -66,7 +66,7 @@
 
     <!-- Promotion Content -->
     <div data-role="main" class="ui-content">
-        <button class="btn warning" id="login-btn">FILTER PROMO ITEMS</button>
+        <button class="btn warning hide" id="login-btn">FILTER PROMO ITEMS</button>
 
 
         <!-- ================ trending product section start ================= -->
@@ -94,7 +94,7 @@
                                     <col width="50">
                                     <tr>
                                         <td align="right">
-                                            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
+                                            <button onclick="var result = document.getElementById('sst1'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
                                                     class="reduced items-count" id="minus1" type="button"><i class="fas fa-minus"></i>
                                             </button>
 
@@ -105,7 +105,7 @@
                                                    class="input-text qty">
                                         </td>
                                         <td>
-                                            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
+                                            <button onclick="var result = document.getElementById('sst1'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
                                                     class="increase items-count" id="plus1" type="button"><i class="fas fa-plus"></i>
                                             </button>
 
@@ -138,7 +138,7 @@
                                     <col width="50">
                                     <tr>
                                         <td align="right">
-                                            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
+                                            <button onclick="var result = document.getElementById('sst2'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
                                                     class="reduced items-count" id="minus2" type="button"><i class="fas fa-minus"></i>
                                             </button>
 
@@ -149,7 +149,7 @@
                                                    class="input-text qty">
                                         </td>
                                         <td>
-                                            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
+                                            <button onclick="var result = document.getElementById('sst2'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
                                                     class="increase items-count" id="plus2" type="button"><i class="fas fa-plus"></i>
                                             </button>
 
@@ -182,7 +182,7 @@
                                     <col width="50">
                                     <tr>
                                         <td align="right">
-                                            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
+                                            <button onclick="var result = document.getElementById('sst3'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
                                                     class="reduced items-count" id="minus3" type="button"><i class="fas fa-minus"></i>
                                             </button>
 
@@ -193,7 +193,7 @@
                                                    class="input-text qty">
                                         </td>
                                         <td>
-                                            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
+                                            <button onclick="var result = document.getElementById('sst3'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
                                                     class="increase items-count" id="plus3" type="button"><i class="fas fa-plus"></i>
                                             </button>
 
@@ -226,7 +226,7 @@
                                     <col width="50">
                                     <tr>
                                         <td align="right">
-                                            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
+                                            <button onclick="var result = document.getElementById('sst4'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
                                                     class="reduced items-count" id="minus4" type="button"><i class="fas fa-minus"></i>
                                             </button>
 
@@ -237,7 +237,7 @@
                                                    class="input-text qty">
                                         </td>
                                         <td>
-                                            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
+                                            <button onclick="var result = document.getElementById('sst4'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
                                                     class="increase items-count" id="plus4" type="button"><i class="fas fa-plus"></i>
                                             </button>
 
@@ -270,7 +270,7 @@
                                     <col width="50">
                                     <tr>
                                         <td align="right">
-                                            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
+                                            <button onclick="var result = document.getElementById('sst5'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
                                                     class="reduced items-count" id="minus5" type="button"><i class="fas fa-minus"></i>
                                             </button>
 
@@ -281,7 +281,7 @@
                                                    class="input-text qty">
                                         </td>
                                         <td>
-                                            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
+                                            <button onclick="var result = document.getElementById('sst5'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
                                                     class="increase items-count" id="plus5" type="button"><i class="fas fa-plus"></i>
                                             </button>
 
@@ -314,7 +314,7 @@
                                     <col width="50">
                                     <tr>
                                         <td align="right">
-                                            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
+                                            <button onclick="var result = document.getElementById('sst6'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
                                                     class="reduced items-count" id="minus6" type="button"><i class="fas fa-minus"></i>
                                             </button>
 
@@ -325,7 +325,7 @@
                                                    class="input-text qty">
                                         </td>
                                         <td>
-                                            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
+                                            <button onclick="var result = document.getElementById('sst6'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
                                                     class="increase items-count" id="plus6" type="button"><i class="fas fa-plus"></i>
                                             </button>
 
@@ -358,7 +358,7 @@
                                     <col width="50">
                                     <tr>
                                         <td align="right">
-                                            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
+                                            <button onclick="var result = document.getElementById('sst7'); var sst = result.value; if( !isNaN( sst ) &amp;&amp; sst > 0 ) result.value--;return false;"
                                                     class="reduced items-count" id="minus7" type="button"><i class="fas fa-minus"></i>
                                             </button>
 
@@ -369,7 +369,7 @@
                                                    class="input-text qty">
                                         </td>
                                         <td>
-                                            <button onclick="var result = document.getElementById('sst'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
+                                            <button onclick="var result = document.getElementById('sst7'); var sst = result.value; if( !isNaN( sst )) result.value++;return false;"
                                                     class="increase items-count" id="plus7" type="button"><i class="fas fa-plus"></i>
                                             </button>
 
