--- a/HomePage.html
+++ b/HomePage.html
@@ -62,40 +62,49 @@
         </div>
     </div>
 
-    <!-- Promotion Slideshow -->
+<!--    Promo video-->
     <div data-role="main" class="ui-content">
-        <div id="promo_slides" class="carousel slide" data-ride="carousel">
-
-            <!-- Indicators -->
-            <ul class="carousel-indicators">
-                <li data-target="#promo_slides" data-slide-to="0" class="active"></li>
-                <li data-target="#promo_slides" data-slide-to="1"></li>
-                <li data-target="#promo_slides" data-slide-to="2"></li>
-<!--                <li data-target="#promo_slides" data-slide-to="3"></li>-->
-            </ul>
-
-            <!-- The slideshow -->
-            <div class="carousel-inner slides">
-                <div class="carousel-item active slides">
-                    <img src="images/products.jpg" alt="promo 1"  style="max-width:600px;height:auto;">
-                </div>
-                <div class="carousel-item slides">
-                    <img src="images/best%20promo.png" alt="promo 2"  style="max-width:600px;height:auto;">
-                </div>
-                <div class="carousel-item slides">
-                    <img src="images/no%20fakes.PNG" alt="promo 3" style="max-width:600px;height:auto;">
-                </div>
-            </div>
-
-            <!-- Left and right controls -->
-            <a class="carousel-control-prev" href="#demo" data-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-            </a>
-            <a class="carousel-control-next" href="#demo" data-slide="next">
-                <span class="carousel-control-next-icon"></span>
-            </a>
-        </div>
+    <div class="slides">
+        <video style="max-width:600px; width:100%; height:auto;" controls autoplay>
+            <source src="images/Promo.MP4" type="video/mp4">
+        </video>
     </div>
+    </div>
+
+    <!-- Promotion Slideshow -->
+<!--    <div data-role="main" class="ui-content">-->
+<!--        <div id="promo_slides" class="carousel slide" data-ride="carousel">-->
+
+<!--            &lt;!&ndash; Indicators &ndash;&gt;-->
+<!--            <ul class="carousel-indicators">-->
+<!--                <li data-target="#promo_slides" data-slide-to="0" class="active"></li>-->
+<!--                <li data-target="#promo_slides" data-slide-to="1"></li>-->
+<!--                <li data-target="#promo_slides" data-slide-to="2"></li>-->
+<!--&lt;!&ndash;                <li data-target="#promo_slides" data-slide-to="3"></li>&ndash;&gt;-->
+<!--            </ul>-->
+
+<!--            &lt;!&ndash; The slideshow &ndash;&gt;-->
+<!--            <div class="carousel-inner slides">-->
+<!--                <div class="carousel-item active slides">-->
+<!--                    <img src="images/products.jpg" alt="promo 1"  style="max-width:600px;height:auto;">-->
+<!--                </div>-->
+<!--                <div class="carousel-item slides">-->
+<!--                    <img src="images/best%20promo.png" alt="promo 2"  style="max-width:600px;height:auto;">-->
+<!--                </div>-->
+<!--                <div class="carousel-item slides">-->
+<!--                    <img src="images/no%20fakes.PNG" alt="promo 3" style="max-width:600px;height:auto;">-->
+<!--                </div>-->
+<!--            </div>-->
+
+<!--            &lt;!&ndash; Left and right controls &ndash;&gt;-->
+<!--            <a class="carousel-control-prev" href="#demo" data-slide="prev">-->
+<!--                <span class="carousel-control-prev-icon"></span>-->
+<!--            </a>-->
+<!--            <a class="carousel-control-next" href="#demo" data-slide="next">-->
+<!--                <span class="carousel-control-next-icon"></span>-->
+<!--            </a>-->
+<!--        </div>-->
+<!--    </div>-->
 
     <!-- Categories -->
     <div data-role="main" class="ui-content">
