--- a/qr.html
+++ b/qr.html
@@ -13,7 +13,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-    
+    <script src="JavaScript/qrScanner.js" async></script>
 </head>
 <body>
 <div data-role="page" id="pageone">
@@ -83,29 +83,29 @@
 	</section>
  <script type="text/javascript">
 
-                // var coins = JSON.parse(localStorage.getItem('coins'));
-                var coins = "";
-                var newCoins =0;
-
-                let scanner = new Instascan.Scanner({ video: document.getElementById('preview') });
-                scanner.addListener('scan', function (content) {
-                    alert(content);
-                    $("#redeemedCoins").html(content);
-                    $('#qrScanner').hide();
-                    document.getElementById("redeemedCoins").innerHTML = content;
-                    newCoins = content;
-                    coins = coins + newCoins;
-                    console.log("coin total => "+coins);
-                });
-                Instascan.Camera.getCameras().then(function (cameras) {
-                    if (cameras.length > 0) {
-                        scanner.start(cameras[0]);
-                    } else {
-                        console.error('No cameras found.');
-                    }
-                }).catch(function (e) {
-                    console.error(e);
-                });
+                // // var coins = JSON.parse(localStorage.getItem('coins'));
+                // var coins = "";
+                // var newCoins =0;
+                //
+                // let scanner = new Instascan.Scanner({ video: document.getElementById('preview') });
+                // scanner.addListener('scan', function (content) {
+                //     alert(content);
+                //     $("#redeemedCoins").html(content);
+                //     $('#qrScanner').hide();
+                //     document.getElementById("redeemedCoins").innerHTML = content;
+                //     newCoins = content;
+                //     coins = coins + newCoins;
+                //     console.log("coin total => "+coins);
+                // });
+                // Instascan.Camera.getCameras().then(function (cameras) {
+                //     if (cameras.length > 0) {
+                //         scanner.start(cameras[0]);
+                //     } else {
+                //         console.error('No cameras found.');
+                //     }
+                // }).catch(function (e) {
+                //     console.error(e);
+                // });
 
 
 
