--- a/PaymentPage.html
+++ b/PaymentPage.html
@@ -12,6 +12,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel = "stylesheet" href = "https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
     <script src = "https://checkout.stripe.com/checkout.js" ></script>
 
@@ -48,40 +51,65 @@
 
     <!--Main content-->
     <div data-role="main" class="ui-content">
-            <p id="paymentInfo_title"><b>Payment Information</b></p>
+        <!-- Page Container -->
+        <div class="w3-content w3-margin-top" style="max-width:1400px;">
 
 
-        <div data-role="main" class="ui-content" >
-            <form method="post" action="demoform.asp" id="form">
-                <p id="paymentMethod-title"><b>Select Payment Method</b></p>
-                <table align="center">
-                    <tr>
-                        <td>
-                            <i class="far fa-credit-card  fa-3x  fa-border" id="visa_icon" >
-                            <b><p class="pType">CARD</p></b>
-                        </i>
 
-                        </td>
-                        <td>
-                            <!--<i class="fas fa-coins"></i>-->
-                        <i class="fas fa-coins fa-3x  fa-border" id="cash_icon">
-                            <p class="pType">CASH</p>
-                        </i>
-                        </td>
-                    </tr>
+                <!-- Left Column -->
+                <div class="w3-half">
 
-                </table>
-                <br>
+                    <div class="w3-black w3-card w3-text-white price-container">
+                        <div class="w3-display-container">
 
-                <div class="paymentDue">
-                <p id="paymentDetail-title"><b>TOTAL DUE</b></p>
-                    <label id="cardType-label"><script>retriveCost()</script></label>
+                            <p id="total-price"></p>
+                            <p id="total-price-text">Total price </p>
+                        </div>
+                    </div><br>
+
+                    <!-- End Left Column -->
                 </div>
 
-                <br>
-                <button class="btn info" id="back-btn">Back</button>
-                <button class="btn warning" id="payment-btn" onclick="window.location.href='paymentSuccess.html'">Confirm Purchase</button>
-            </form>
+                <!-- Right Column -->
+                <div class="w3-half">
+
+                    <div class="w3-container w3-white w3-card w3-margin-bottom">
+                        <div data-role="main" class="ui-content" >
+                        <form method="post" action="demoform.asp" id="form">
+                        <p id="paymentMethod-title"><b>Select Payment Method</b></p>
+                            <br>
+                        <table align="center">
+                        <tr>
+                        <td>
+                        <i class="far fa-credit-card  fa-3x  fa-border" id="visa_icon" >
+                        <b><p class="pType">CARD</p></b>
+                        </i>
+
+                        </td>
+                        <td>
+                        <!--<i class="fas fa-coins"></i>-->
+                        <i class="fas fa-coins fa-3x  fa-border" id="cash_icon">
+                        <p class="pType">CASH</p>
+                        </i>
+                        </td>
+                        </tr>
+
+                        </table>
+                        <br>
+                            <br>
+
+                        <!--<div class="paymentDue">-->
+                        <!--<p id="paymentDetail-title"><b>TOTAL DUE</b></p>-->
+                        <!--<label id="cardType-label"><script>retriveCost()</script></label>-->
+                        <!--</div>-->
+
+                        <br>
+                        <button class="btn info" id="back-btn">Back</button>
+                        <button class="btn warning" id="payment-btn" onclick="window.location.href='paymentSuccess.html'">Checkout</button>
+                        </form>
+                        </div>
+                    </div>
+                </div>
         </div>
     </div>
 
