--- a/sss/qr.html
+++ b/sss/qr.html
@@ -13,7 +13,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://rawgit.com/schmich/instascan-builds/master/instascan.min.js"></script>
     <script src='https://kit.fontawesome.com/a076d05399.js'></script>
-    
+    <script src="">
 </head>
 <body>
 <div data-role="page" id="pageone">
